# aiogram-template-bot

./: .env.example  README.md  pyproject.toml
src/: bot.py  database.py  settings.py
src/filters/: has_role.py
src/handlers/: admin.py  agreement.py  start.py
src/keyboards/: inline.py
src/middlewares/: db_session.py  user_check.py
src/models/: user.py
src/states/: admin_states.py
src/utils/: misc.py
